crates/compiler/parse/tests/snapshots/pass/malformed_pattern_field_access.expr.formatted.roc
when x is
    bar.and -> 1
    _ -> 4