crates/compiler/parse/tests/snapshots/fail/when_over_indented_int.expr.roc
when 4 is
    5 -> Num.neg
     2 -> 2
